# TurtleBot2-waiter-colab

./: README.md
catkin_ws/src/tb_waiter/: CMakeLists.txt  package.xml  readme_3m.txt
catkin_ws/src/tb_waiter/action/: TurtlebotMove.action
catkin_ws/src/tb_waiter/include/tb_waiter/: assigner_agent.h  assigner_agent_dra.h  datalogger.hpp  detect_region.h  kobuki_base.h  kobuki_command.h  service_agent.h  waiter_agent_dra.h
catkin_ws/src/tb_waiter/launch/: tb_amcl.launch  tb_amcl_robot.launch  tb_service.launch  tb_table.launch
catkin_ws/src/tb_waiter/launch/_dra/: tb_dra_table.launch  tb_dra_waiter.launch
catkin_ws/src/tb_waiter/launch/bringup/: minimal.launch
catkin_ws/src/tb_waiter/launch/bringup/includes/: robot.launch.xml
catkin_ws/src/tb_waiter/launch/bringup/includes/kobuki/: mobile_base.launch.xml
catkin_ws/src/tb_waiter/launch/bringup/includes/kobuki/param/: base.yaml
catkin_ws/src/tb_waiter/launch/includes/: amcl.launch.xml  amcl_diff.launch.xml  docking.launch  move_base.launch.xml  move_base_amcl.launch.xml
catkin_ws/src/tb_waiter/launch/simulation/gazebo/: tb2_tables_gazebo.launch  tb3_tables_gazebo.launch
catkin_ws/src/tb_waiter/launch/simulation/gazebo/includes/: move_base_2.launch  move_base_3.launch  move_base_sim.launch.xml  turtlebot1.launch
catkin_ws/src/tb_waiter/launch/simulation/stage/0_lab_sim/: move_base_stage_lab.launch  tb_2stage_lab.launch
catkin_ws/src/tb_waiter/launch/simulation/stage/5_lab_sim3/: amcl_demo_3_test.launch  tb_2stage_lab3.launch
catkin_ws/src/tb_waiter/launch/simulation/stage/5_lab_sim3/amcl/: amcl_diff.launch.xml
catkin_ws/src/tb_waiter/launch/simulation/stage/extras/: rviz_real.launch  stage_rviz.launch  teleop_stage.launch
catkin_ws/src/tb_waiter/launch/simulation/stage/include/: move_base_stage.launch.xml
catkin_ws/src/tb_waiter/launch/spade/: runspade.launch
catkin_ws/src/tb_waiter/maps/: blank_map.yaml  cave.pgm  cave.yaml  house.pgm  house.yaml  lab2.yaml  lab3.pgm  lab3.yaml  willow.yaml  yujin.pgm  yujin.yaml
catkin_ws/src/tb_waiter/msg/: ContractNetMsg.msg  DynamicRoleAssigment.msg  DynamicRoleInfo.msg
catkin_ws/src/tb_waiter/param/autodocking/: auto_docking.yaml
catkin_ws/src/tb_waiter/param/move_base/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/tb_waiter/param/move_base/move_base_amcl/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
catkin_ws/src/tb_waiter/param/move_base/move_base_gazebo/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
catkin_ws/src/tb_waiter/param/move_base/move_base_stage/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/tb_waiter/rviz/: rviz_lab_real.rviz  rviz_stage_lab.rviz  rviz_test.rviz  turtle1.rviz  two_robots.rviz  two_robots_map.rviz  two_robots_origin.rviz  two_robots_willow.rviz
catkin_ws/src/tb_waiter/scripts/: mainSimCN.py
catkin_ws/src/tb_waiter/scripts/BashScripts/: gazebo.bash  runspade.bash
catkin_ws/src/tb_waiter/scripts/BashScripts/CnetMarket_bash/sim/: cnm_service2_sim.bash  cnm_service3_sim.bash
catkin_ws/src/tb_waiter/scripts/BashScripts/Cnet_bash/: table0.bash  table1.bash  table2.bash  table3.bash
catkin_ws/src/tb_waiter/scripts/BashScripts/Cnet_bash/real/: cn_service0.bash  cn_service1.bash  cn_service2.bash  cn_service3.bash
catkin_ws/src/tb_waiter/scripts/BashScripts/Cnet_bash/sim/: cn_service0_sim.bash  cn_service1_sim.bash
catkin_ws/src/tb_waiter/scripts/BashScripts/roslaunch_bash/: launch_assigner.bash  launch_gazebo.bash  launch_runspade.bash  launch_service.bash  runSimulation.bash
catkin_ws/src/tb_waiter/scripts/CNetMarketScripts/AssignerScripts/: AssignerMarketAgent.py  csvLoggerAssigner.py
catkin_ws/src/tb_waiter/scripts/CNetMarketScripts/ServiceAgentScript/: ServiceMarketAgent.py  csvLoggerService.py  robotCommands.py
catkin_ws/src/tb_waiter/scripts/CNetScripts/AssignerScripts/: AssignerAgent.py
catkin_ws/src/tb_waiter/scripts/CNetScripts/ServiceAgentScript/: ServiceAgent.py  robotCommands.py
catkin_ws/src/tb_waiter/scripts/CNetScripts/SimMonitorScripts/: simMonitor.py
catkin_ws/src/tb_waiter/src/agent_frame/contract_net/assigner_agent/: assigner_agent.cpp
catkin_ws/src/tb_waiter/src/agent_frame/contract_net/service_agent/: service_agent.cpp
catkin_ws/src/tb_waiter/src/agent_frame/dynamic_role/assigner_agent/: assigner_agent_dra.cpp
catkin_ws/src/tb_waiter/src/agent_frame/dynamic_role/robot_agent/: waiter_agent_dra.cpp
catkin_ws/src/tb_waiter/src/mark_recognition/: detect_region.cpp  mark_recognition.cpp
catkin_ws/src/tb_waiter/src/simulation/: fake_localization.cpp  odom.cpp  sim_coordinator.cpp  turtlebot_tf_broadcaster.cpp
catkin_ws/src/tb_waiter/src/turtlebot/: kobuki_base.cpp  kobuki_command.cpp  turtlebot_actions.cpp  turtlebot_services.cpp
catkin_ws/src/tb_waiter/srv/: cvMarkRec.srv  robPlanDist.srv  robPosInfo.srv  robResetPos.srv
catkin_ws/src/tb_waiter/worlds/: mesas3.world  tres_mesas.world
catkin_ws/src/tb_waiter/worlds/stage/: cave.pgm  cave.world  house.pgm  house.world  lab.world  lab1.pgm  lab2.pgm  lab3.pgm  lab_3.world  yujin.pgm  yujin.world
