<?xml version="1.0"?>
<package>
  <name>tb_waiter</name>
  <version>0.0.0</version>
  <description>The tb_waiter package</description>

  <!-- <maintainer email="chd0043@gmail.com">-</maintainer> -->
  <maintainer email="chd0043@gmail.com">chd</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>openni_camera</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>
  <build_depend>xacro</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>openni_camera</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>xacro</run_depend> 



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
